# openagents-kit

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  release.yml
catalog/: index.json
crates/openagents-adapters/: Cargo.toml
crates/openagents-adapters/src/: lib.rs  sync.rs
crates/openagents-core/: Cargo.toml
crates/openagents-core/src/: lib.rs
crates/openagents-tui/: Cargo.toml
crates/openagents-tui/src/: catalog.rs  control.rs  detection.rs  main.rs  runtime.rs  setup.rs  ui.rs
docs/superpowers/plans/: 2026-03-28-first-run-ux-refresh.md  2026-03-30-npx-global-installer.md  2026-04-09-auto-ship-release.md
docs/superpowers/specs/: 2026-03-28-first-run-ux-refresh-design.md  2026-03-30-npx-global-installer-design.md
examples/basic/: workspace.yaml
scripts/: bump-version.mjs  install.ps1  install.sh  npx-installer.mjs  release-guard.mjs  ship-release.mjs
tests/: npx-installer.test.mjs  release-guard.test.mjs  ship.test.mjs  workflow-ci.test.mjs  workflow-release.test.mjs
