[package]
name = "openagents-tui"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "openagents-kit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
openagents-adapters = { path = "../openagents-adapters" }
openagents-core = { path = "../openagents-core" }
ratatui.workspace = true
crossterm.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
